--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/jeff.sternberg"
+  facebook         : "jeff.sternberg"
   foursquare       :
   github           : "jeffreysternberg530"
   google_plus      :
@@ -45,7 +45,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "JeffSternberg"
   vine             :
   weibo            :
   xing             :
