--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jeffrey Sternberg"
+title                    : "Jeffrey L Sternberg"
 title_separator          : "-"
-name                     : &name "Jeffrey Sternberg"
+name                     : &name "Jeffrey L Sternberg"
 description              : &description "My Academic Website"
 url                      : https://jeffreysternberg530.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
